src/tests/InvalidTests/VariableDeclaration_1.agl
cellSize : Number = 200;

cellSize = 250; # OK

cellSize = "Joao"; # Erro
